// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders nothing when initializing 1`] = `
<div>
  <div>
    <div>
      [NAVIGATION]
    </div>
    <main
      class="relative mt-xl mx-md mb-md md:absolute md:m-0 md:inset-0"
    />
  </div>
</div>
`;

exports[`Layout renders the children when initialized 1`] = `
<div>
  <div>
    <div>
      [NAVIGATION]
    </div>
    <main
      class="relative mt-xl mx-md mb-md md:absolute md:m-0 md:inset-0"
    >
      <div>
        Hello World!
      </div>
    </main>
  </div>
</div>
`;
